--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
     "@angular/platform-browser": "~8.2.9",
     "@angular/platform-browser-dynamic": "~8.2.9",
     "@angular/router": "~8.2.9",
+    "firebase-tools": "^7.8.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.9",
-    "@angular/cli": "~8.3.9",
+    "@angular/cli": "~8.3.19",
     "@angular/compiler-cli": "~8.2.9",
     "@angular/language-service": "~8.2.9",
     "@types/node": "~8.9.4",
